Version 2.2.0
~~~~~~~~~~~~~
Post DiFX-2.1

Version 2.1.0
~~~~~~~~~~~~
Version number change prior to DiFX-2.1
Version for DiFX-2.1, May 4, 2012

Version 2.0.2
~~~~~~~~~~~~~
Post 2.0.1
Add new Mark5 states "booting", "recording" and "copyto"
Add new Mark5 state "record"
Add SMART monitor message type for disk diagnostics
  one document per disk (i.e., 8 per module)
Change Condition message type to DriveStats
  attempts made to retain backward comatibility
Add dispersion measure to transient message
Fix parsing of Mark5 version messages and include a couple extra parameters
Add support for "restartSeconds" to DifxStartMessage
Add options for different start "functions"
Add support for diagnostic messages
Add support for file request
Add nCore to Load message
Add utility restartdifx

Version 2.0.1
~~~~~~~~~~~~~
Post version 2.0.0
Add binary message option for testdifxmessagereceive
Able to make RedHat RPM
Version for DiFX-2.0.1, June 10, 2011

Version 2.0.0
~~~~~~~~~~~~~
Re-numbered version from 7.4 (the jump from 0.7 to 7.1 some time ago was a mistake)
Added different types of binary message (STA/ autocorrelation, cross-correlation, kurtosis)
Some fixes for array lengths
Version for DiFX-2.0.0

Version 7.3
~~~~~~~~~~~
Add difxVersion to difxStartMessage
cpumon and mk5mon: catch exceptions and prevent terminal infection
Add mark5ipc library
difxlog: Log transient messages
testdifxmessagereceive: allow selection of one message type, add in-line help
For DiFX-1.5.4

Version 7.2
~~~~~~~~~~~
Add transient XML type
Fix errormon/errormon2 in cases where "entities" are in message strings
Use pclose after popen (difxlog)
Lots of protection against excessive string lengths
For DiFX-1.5.3

Version 7.1
~~~~~~~~~~~
Do better job expanding "entities" in XML formation
 - do expansion more universally
 - encode ascii values 1-31, 128-255 in [[]] so they can be idenfied and not crash parsers
Add new Mark5 States: Test TestWrite and TestRead
Improve safety of string manipulation